# hasu-gallery

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.ccg/spec/: phase0-content-core-model.md  phase1-summary.md  phase2-plan.md  phase3-plan.md  phase3-summary.md  roadmap.md
.ccg/tasks/init-hasu-gallery-repo/: completion-report.md  final-report.md  verification-guide.md
.github/workflows/: ci.yml
apps/web/: index.html  package.json  rspack.config.js
apps/web/src/: main.tsx  router.tsx
apps/web/src/api/: auth.ts  client.ts  moderation.ts  profile.ts  upload.ts  works.ts
apps/web/src/components/: AuthGuard.tsx  AuthLayout.tsx  FileDropZone.tsx  FilterPanel.tsx  ImagePreview.tsx  LoginForm.tsx  ModerationActions.tsx  ModerationLog.tsx  ModeratorGuard.tsx  MyWorksList.tsx  Pagination.tsx  RegisterForm.tsx  StatsCard.tsx  UploadForm.tsx  WorkCard.tsx  WorksGrid.tsx
apps/web/src/pages/: GalleryPage.tsx  LoginPage.tsx  ModerationPage.tsx  ProfilePage.tsx  RegisterPage.tsx  UploadPage.tsx  WorkDetailPage.tsx
apps/web/src/store/: auth.ts  (+1 more)
backend/: .env.example  Cargo.toml
backend/migrations/: 001_initial.sql
backend/src/: auth.rs  db.rs  image_processor.rs  main.rs  middleware.rs  storage.rs
backend/src/models/: mod.rs  user.rs
backend/src/routes/: auth.rs  mod.rs  moderation.rs  upload.rs  users.rs  works.rs
docs/: edge-server-setup.md  phase1-summary.md
scripts/: init-minio-bucket-simple.ps1  init-minio-bucket.ps1  setup-edge-postgres.sh  test-db-connection.sh  test-upload.ps1  test-upload.sh  verify-remote-db.sh
(+1 files in other folders)
