[package]
name = "hasu-gallery-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = { version = "0.5", features = ["std"] }
tower-sessions = "0.12"
tower-sessions-sqlx-store = { version = "0.12", features = ["postgres"] }
validator = { version = "0.18", features = ["derive"] }
time = "0.3"
axum-extra = { version = "0.9", features = ["multipart"] }
image = "0.25"
aws-sdk-s3 = "1.52"
aws-config = "1.5"
bytes = "1"

[[bin]]
name = "hasu-gallery-api"
path = "src/main.rs"
